--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 
 
-  <evis key="C6G9n06E22Q=" floater="true" partial="true" isstorageonlyoptional="true"
-    email="local-CapacitorStorage.profile-email" username="local-CapacitorStorage.profile-firstName"></evis>
+  <evis key="C6G9n06E22Q=" floater="true"></evis>
 
 
 
